add novo banner e responsividade

--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,31 +1,41 @@
 @import '../abstract/variaveis';
 
 .banner {
-  background: url(../../imagens/banner3.jpg) 100% no-repeat;
+  background: url(../../imagens/banner7.jpg) 100% no-repeat;
   min-height: 400px;
+  
   background-size:cover;
+  background-position: bottom 40%;
+
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items:center;
+  
  
   .inner-banner {
+    display: flex;
     padding:4em;
+    margin-left:9em;
     border:1px solid rgba(156, 155, 155, 0.103);
-          
+    display: flex;
+    align-items:left;
+    justify-content: left;
+    flex-direction: column;     
     
-    background-color: $cor-terciaria;
+    /* background-color: $cor-terciaria;
     background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
     border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
+    border-top-right-radius: 20px; */
     
   }
     h1{
-        font-size: 4rem;
-        color: $cor-primaria;
+        font-size: 5rem;
+        color: rgb(225, 219, 219);
+        margin-bottom: 1rem;
     }
     h2{
         font-size: 2rem;
-        color: $cor-secundaria;
+        color: #f8f8f8
     }
 
 }
