--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -9,64 +9,66 @@
     font-weight: 400;
     text-align: center;
     border-bottom: 1px solid $cor-primaria;
-    padding:1rem;
+    padding: 1rem;
     margin: 1rem;
-      hr {
-         
-        border-top:1px solid black;
-        }
-      }
+    hr {
+      border-top: 1px solid black;
+    }
   }
-  h4 {
-    text-align: center;
-    font-size: $tamanho-do-texto / 1.8;
-    margin-top:1.5rem;
-    margin-bottom: 20px;
-    font-weight: 300;
-    color: $cor-primaria;
-  }
+}
+h4 {
+  text-align: center;
+  font-size: $tamanho-do-texto / 1.8;
+  margin-top: 1.5rem;
+  margin-bottom: 20px;
+  font-weight: 300;
+  color: $cor-primaria;
+}
 
-  .produto-p {
-    font-size: $tamanho-do-texto / 2.3;
-    text-align: center;
-    font-weight: 300;
-    
-    color: $cor-primaria;
-    line-height: 2rem;
-  }
+.produto-p {
+  font-size: $tamanho-do-texto / 2.3;
+  text-align: center;
+  font-weight: 300;
+
+  color: $cor-primaria;
+  line-height: 2rem;
+}
 
 .img-slider-wrapper {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  height: 600px;
 
   .img-slider {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    width: 500px;
-    height:500px;
-    
 
     .slide {
+      justify-content: center;
+      align-items: center;
       z-index: 1;
       position: absolute;
-      
-      .img {
-        max-width: 100%;
-        width: 100%;
-        border-radius: 10px;
-        height: auto !important
+
+      .produtoImagem {
+        width: 85%;
+        border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
+        &:hover {
+          transition: 0.6s ease-in-out 100ms;
+          box-shadow: rgba(0, 0, 0, 0.307) 2px 10px 16px;
+        }
       }
       .info {
         position: absolute;
         bottom: 0;
         color: white;
-        padding: 15px 30px;
+        padding: 30px 20px;
         h2 {
           color: $cor-terciaria;
-          font-size: 45px;
+          font-size: 30px;
           text-transform: uppercase;
           font-weight: 600;
           letter-spacing: 3px;
@@ -77,33 +79,39 @@
           font-size: 20px !important;
           padding: 10px !important;
           text-align: left !important;
-          
+        }
+        .btn-comprar {
+          padding: 10px 30px;
+          border-radius: 40px;
+          margin-block: 0.75rem;
+          border-color: 1px solid;
+          border-color: $cor-secundaria;
+          background-color: $cor-terciaria;
+          cursor: pointer;
         }
       }
     }
-
-    .navigation {
-      z-index: 2;
-      position: absolute;
-      display: flex;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
-      .btn {
-        background: rgba(255, 255, 255, 0.5);
-        width: 12px;
-        height: 12px;
-        margin: 10px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-    }
   }
+
+  
+}
+
+.navigation {
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+    .ph-caret-circle-left-thin .right-thin {
+      z-index:999;
+      background-color: black;
+      
+    }
+  
+   
 }
 
 @media (max-width: 480px) {
   #produtos {
-    
     h3 {
       margin-top: 80px;
       font-size: $tamanho-do-texto / 2.7;
@@ -111,9 +119,8 @@
       text-transform: uppercase;
       font-weight: 400;
       text-align: center;
-      
+
       margin: 1.5rem;
-      
     }
     h4 {
       text-align: center;
@@ -127,31 +134,25 @@
       font-size: $tamanho-do-texto / 2.9;
       line-height: 2rem;
       color: $cor-secundaria;
-      margin-inline:2.5rem;
+      margin-inline: 2.5rem;
       text-align: center;
-      
     }
-  
-  
-  .img-slider-wrapper {
-    max-width:100%;
-    
+
+    .img-slider-wrapper {
+      max-width: 100%;
 
       .img-slider {
-        width:500px;
-        height:400px;
-        position:relative;
+        width: 500px;
+        height: 400px;
+        position: relative;
 
         .slide {
           z-index: 1;
           position: absolute;
-                       
-            
-            img {
-                width: 350px;
-                
-            }
-          
+
+          img {
+            width: 350px;
+          }
 
           .info {
             padding: 8px 15px;
