--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@ html, body {
   font-family: "EB Garamond", sans-serif;
   background: #f6f7f6;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 nav {
@@ -95,7 +96,7 @@ nav ul li a:hover {
 }
 #servicos h3 {
   text-align: center;
-  font-size: 1.6666666667rem;
+  font-size: 1.3636363636rem;
   margin-bottom: 80px;
   font-weight: 300;
   color: #566134;
@@ -356,34 +357,38 @@ h4 {
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+  height: 600px;
 }
 .img-slider-wrapper .img-slider {
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  width: 500px;
-  height: 500px;
 }
 .img-slider-wrapper .img-slider .slide {
+  justify-content: center;
+  align-items: center;
   z-index: 1;
   position: absolute;
 }
-.img-slider-wrapper .img-slider .slide .img {
-  max-width: 100%;
-  width: 100%;
-  border-radius: 10px;
-  height: auto !important;
+.img-slider-wrapper .img-slider .slide .produtoImagem {
+  width: 85%;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
+}
+.img-slider-wrapper .img-slider .slide .produtoImagem:hover {
+  transition: 0.6s ease-in-out 100ms;
+  box-shadow: rgba(0, 0, 0, 0.307) 2px 10px 16px;
 }
 .img-slider-wrapper .img-slider .slide .info {
   position: absolute;
   bottom: 0;
   color: white;
-  padding: 15px 30px;
+  padding: 30px 20px;
 }
 .img-slider-wrapper .img-slider .slide .info h2 {
   color: #e9f1ec;
-  font-size: 45px;
+  font-size: 30px;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 3px;
@@ -395,21 +400,25 @@ h4 {
   padding: 10px !important;
   text-align: left !important;
 }
-.img-slider-wrapper .img-slider .navigation {
-  z-index: 2;
-  position: absolute;
-  display: flex;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-.img-slider-wrapper .img-slider .navigation .btn {
-  background: rgba(255, 255, 255, 0.5);
-  width: 12px;
-  height: 12px;
-  margin: 10px;
-  border-radius: 50%;
+.img-slider-wrapper .img-slider .slide .info .btn-comprar {
+  padding: 10px 30px;
+  border-radius: 40px;
+  margin-block: 0.75rem;
+  border-color: 1px solid;
+  border-color: #64655b;
+  background-color: #e9f1ec;
   cursor: pointer;
+}
+
+.navigation {
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.navigation .ph-caret-circle-left-thin .right-thin {
+  z-index: 999;
+  background-color: black;
 }
 
 @media (max-width: 480px) {
