--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,30 +64,36 @@ nav ul li a:hover {
 
 @media (max-width: 480px) {
   .banner {
-    background: url(../../imagens/banner3.jpg) 100% no-repeat;
+    background: url(../../imagens/banner7.jpg) 100% no-repeat;
     min-height: 200px;
     background-size: cover;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
   }
   .banner .inner-banner {
     padding: 1em;
     border: 1px solid rgba(156, 155, 155, 0.103);
+    margin-left: 2rem;
   }
   .banner h1 {
     font-size: 2rem;
+    margin-bottom: 0.5rem;
   }
   .banner h2 {
     font-size: 1rem;
-    color: #64655b;
+    color: #f8f8f8;
   }
 }
 #servicos {
-  margin: 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 70px;
 }
 #servicos h4 {
-  font-size: 1.3636363636rem;
+  font-size: 1.5rem;
   color: #64655b;
   text-transform: uppercase;
   font-weight: 400;
@@ -100,6 +106,10 @@ nav ul li a:hover {
   margin-bottom: 80px;
   font-weight: 300;
   color: #566134;
+  margin-top: 0.5rem;
+  max-width: 550px;
+  line-height: 1.8rem;
+  text-align: center;
 }
 #servicos .cards {
   display: flex;
@@ -121,7 +131,7 @@ nav ul li a:hover {
   box-shadow: rgba(0, 0, 0, 0.307) 2px 10px 16px;
 }
 #servicos .cards .card h5 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   font-weight: 300;
   margin-top: 25px;
   margin-bottom: 15px;
@@ -321,6 +331,12 @@ nav ul li a:hover {
     border-color: #a7d8bb;
   }
 }
+#produtos {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+}
 #produtos h3 {
   margin-top: 80px;
   font-size: 1.3636363636rem;
@@ -352,6 +368,7 @@ h4 {
   margin-inline: 2rem;
   color: #566134;
   line-height: 2rem;
+  max-width: 550px;
 }
 
 .img-slider-wrapper {
