Slider Javascript puro

--- a/styles/abstract/_base.scss
+++ b/styles/abstract/_base.scss
@@ -1,8 +1,7 @@
-@import './variaveis';
+@import "./variaveis";
 
-html, body {
-    font-family: $fonte;
-    background: #f6f7f6;
-    width: 100vw;
-    overflow-x: hidden;
+html,
+body {
+  font-family: $fonte;
+  background: #f6f7f6;
 }
