--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -40,10 +40,32 @@ h4 {
   max-width: 550px;
 }
 
-.glide__slides {
-  margin:80px;
+#items-wrapper {
+  display: grid;
+  place-items: center;
+  margin: 3rem;
+  width: 60vw;
+  
 
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+ 
+  #items {
+    display: flex;
+    gap:1rem;
+    overflow-x: auto;
+    overflow-y: hidden;
+
+    .item {
+      flex: none;
+      width: 50%;
+      
+
+      img {
+        width: 100%;
+        height: 90%;
+
+       
+        
+      }
+    }
+  }
 }
