--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,7 @@
-html, body {
+html,
+body {
   font-family: "EB Garamond", sans-serif;
   background: #f6f7f6;
-  width: 100vw;
-  overflow-x: hidden;
 }
 
 nav {
@@ -371,11 +370,25 @@ h4 {
   max-width: 550px;
 }
 
-.glide__slides {
-  margin: 80px;
+#items-wrapper {
+  display: grid;
+  place-items: center;
+  margin: 3rem;
+  width: 60vw;
+}
+#items-wrapper #items {
   display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+#items-wrapper #items .item {
+  flex: none;
+  width: 50%;
+}
+#items-wrapper #items .item img {
+  width: 100%;
+  height: 90%;
 }
 
 footer {
