--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -44,7 +44,7 @@ h4 {
   display: grid;
   place-items: center;
   margin: 3rem;
-  width: 60vw;
+  width: 50vw;
   
 
  
@@ -53,15 +53,16 @@ h4 {
     gap:1rem;
     overflow-x: auto;
     overflow-y: hidden;
+    scroll-snap-type: x mandatory;
 
     .item {
       flex: none;
       width: 50%;
-      
+      scroll-snap-align:start;
 
       img {
         width: 100%;
-        height: 90%;
+        height: 100%;
 
        
         
