--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,21 +374,24 @@ h4 {
   display: grid;
   place-items: center;
   margin: 3rem;
-  width: 60vw;
+  width: 50vw;
 }
 #items-wrapper #items {
   display: flex;
   gap: 1rem;
   overflow-x: auto;
   overflow-y: hidden;
+  -ms-scroll-snap-type: x mandatory;
+      scroll-snap-type: x mandatory;
 }
 #items-wrapper #items .item {
   flex: none;
   width: 50%;
+  scroll-snap-align: start;
 }
 #items-wrapper #items .item img {
   width: 100%;
-  height: 90%;
+  height: 100%;
 }
 
 footer {
