--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -44,7 +44,7 @@ h4 {
   display: grid;
   place-items: center;
   margin: 3rem;
-  width: 50vw;
+  width: 60vw;
 
   #items {
     display: flex;
@@ -53,11 +53,14 @@ h4 {
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
+    scroll-behavior: smooth;
 
     .item {
       flex: none;
       width: 50%;
       scroll-snap-align: start;
+
+      pointer-events: none;
 
       img {
         width: 100%;
