--- a/styles/styles.css
+++ b/styles/styles.css
@@ -374,7 +374,7 @@ h4 {
   display: grid;
   place-items: center;
   margin: 3rem;
-  width: 60vw;
+  width: 70vw;
 }
 #items-wrapper #items {
   display: flex;
@@ -390,11 +390,19 @@ h4 {
   flex: none;
   width: 50%;
   scroll-snap-align: start;
+  position: relative;
   pointer-events: none;
 }
 #items-wrapper #items .item img {
   width: 100%;
   height: 100%;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
+}
+#items-wrapper #items .item .info {
+  position: absolute;
+  bottom: 8%;
+  left: 5%;
 }
 
 footer {
