--- a/styles/components/_produtos.scss
+++ b/styles/components/_produtos.scss
@@ -48,7 +48,7 @@ h4 {
 
   #items {
     display: flex;
-    gap: 1rem;
+    
     overflow-x: auto;
     overflow-y: hidden;
 
@@ -62,20 +62,38 @@ h4 {
       scroll-snap-align: start;
       position: relative;
       pointer-events: none;
-
     
       img {
-        width: 100%;
+        width: 90%;
         height: 100%;
         border-radius: 4px;
-        box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
+        box-shadow: rgba(0, 0, 0, 0.2) 3px 3px 2.6px;
+
+        
         
       
       }
       .info {
         position: absolute;
-        bottom: 8%;
+        bottom: 5%;
         left: 5%;
+        background-color: rgba(199, 203, 184, 0.878);
+        backdrop-filter: blur(95%);
+        border-radius: 0.2rem;
+        padding: 1rem;
+
+        h2 {
+          font-size: $tamanho-do-texto / 1.2;
+          font-weight:600;
+          letter-spacing: 2px;
+          color: $cor-terciaria;
+         
+        }
+        p {
+          margin-top: 0.3rem;
+          font-size: $tamanho-do-texto / 2.5;
+          color:$cor-terciaria; 
+        }
       }
       
       }
