--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -31,13 +31,15 @@
     justify-content: center;
     gap: 35px;
 
-    width: 100%;
+    width: 90%;
+    height: 50%;
 
     .card {
-      width: 350px;
+      width: 50%;
+      height:500px;
 
       text-align: center;
-      padding-bottom: 2rem;
+      padding-bottom: 1rem;
       font-size: $tamanho-do-texto / 2.2;
 
       box-shadow: rgba(0, 0, 0, 0.1) 1px 6px 12px;
@@ -70,17 +72,22 @@
         padding-bottom: 3px;
 
         img {
-          max-width: 100%;
+          width:100%;
+          
         }
       }
       .btn-servico {
         padding: 10px 30px;
         border-radius: 40px;
-        margin-block: 0.75rem;
+        margin-block: 1rem;
         border-color: 1px solid;
         border-color: $cor-secundaria;
         background-color: $cor-terciaria;
         cursor: pointer;
+          
+          &:hover {
+            backdrop-filter: saturate(80%);
+          }
       }
     }
   }
