--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -1,25 +1,25 @@
 @import "../abstract/variaveis";
 
 .banner {
-  background: url(../../imagens/banner7.jpg) 100% no-repeat;
+  background: url(../../imagens/banner10.png) 100% no-repeat;
   min-height: 400px;
-
   background-size: cover;
-  background-position: bottom 40%;
+  background-position: bottom;
+  background-attachment: fixed;
 
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
+
+    
 
   .inner-banner {
-    display: flex;
-    padding: 4em;
-    margin-left: 9em;
+    margin-left: 9rem;
+    margin-bottom: 6rem;
+
     border: 1px solid rgba(156, 155, 155, 0.103);
-    display: flex;
-    align-items: left;
-    justify-content: left;
-    flex-direction: column;
+
+    
 
     /* background-color: $cor-terciaria;
     background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
@@ -27,13 +27,17 @@
     border-top-right-radius: 20px; */
   }
   h1 {
-    font-size: 5rem;
-    color: rgb(225, 219, 219);
-    margin-bottom: 1rem;
+    font-size: 6rem;
+    font-weight: 600;
+    letter-spacing: 3px;
+    color: #c2c9c5;
+    margin-bottom: 0.8rem;
+    text-shadow: rgba(0, 0, 0, 0.8) 1px 6px 12px;
   }
   h2 {
     font-size: 2rem;
     color: #f8f8f8;
+    text-shadow: rgba(0, 0, 0, 0.9) 2px 9px 12px;
   }
 }
 
