--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,36 +29,36 @@ nav ul li a:hover {
 }
 
 .banner {
-  background: url(../../imagens/banner7.jpg) 100% no-repeat;
+  background: url(../../imagens/banner10.png) 100% no-repeat;
   min-height: 400px;
   background-size: cover;
-  background-position: bottom 40%;
+  background-position: bottom;
+  background-attachment: fixed;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
 }
 .banner .inner-banner {
-  display: flex;
-  padding: 4em;
-  margin-left: 9em;
+  margin-left: 9rem;
+  margin-bottom: 6rem;
   border: 1px solid rgba(156, 155, 155, 0.103);
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  flex-direction: column;
   /* background-color: $cor-terciaria;
   background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
   border-top-left-radius: 20px;
   border-top-right-radius: 20px; */
 }
 .banner h1 {
-  font-size: 5rem;
-  color: rgb(225, 219, 219);
-  margin-bottom: 1rem;
+  font-size: 6rem;
+  font-weight: 600;
+  letter-spacing: 3px;
+  color: #c2c9c5;
+  margin-bottom: 0.8rem;
+  text-shadow: rgba(0, 0, 0, 0.8) 1px 6px 12px;
 }
 .banner h2 {
   font-size: 2rem;
   color: #f8f8f8;
+  text-shadow: rgba(0, 0, 0, 0.9) 2px 9px 12px;
 }
 
 @media (max-width: 480px) {
@@ -141,7 +141,7 @@ nav ul li a:hover {
   padding-inline: 2rem;
 }
 #servicos .cards .card p {
-  font-size: 1.3043478261rem;
+  font-size: 1.2rem;
   font-weight: 300;
   color: #64655b;
   line-height: 2rem;
@@ -164,8 +164,9 @@ nav ul li a:hover {
   cursor: pointer;
 }
 #servicos .cards .card .btn-servico:hover {
-  -webkit-backdrop-filter: saturate(80%);
-          backdrop-filter: saturate(80%);
+  background-color: #daece0;
+  transition: 0.3 ease-in-out;
+  border-color: #566134;
 }
 
 @media (max-width: 480px) {
