--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,6 @@ nav ul li a:hover {
 .banner .inner-banner {
   margin-left: 9rem;
   margin-bottom: 6rem;
-  border: 1px solid rgba(156, 155, 155, 0.103);
   /* background-color: $cor-terciaria;
   background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
   border-top-left-radius: 20px;
@@ -63,24 +62,27 @@ nav ul li a:hover {
 
 @media (max-width: 480px) {
   .banner {
-    background: url(../../imagens/banner7.jpg) 100% no-repeat;
-    min-height: 200px;
+    background: url(../../imagens/banner10.png) 100% no-repeat;
+    min-height: 300px;
     background-size: cover;
+    background-position: left;
     display: flex;
+    align-items: flex-end;
     justify-content: left;
-    align-items: center;
   }
   .banner .inner-banner {
-    padding: 1em;
-    border: 1px solid rgba(156, 155, 155, 0.103);
     margin-left: 2rem;
+    /* background-color: $cor-terciaria;
+    background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px; */
   }
   .banner h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     margin-bottom: 0.5rem;
   }
   .banner h2 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     color: #f8f8f8;
   }
 }
