--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -5,7 +5,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 70px;
+  margin-block: 30px;
+  width: 100%;
+  background-color: #f2f4f2;
+  
   h4 {
     font-size: $tamanho-do-texto / 2;
     color: $cor-secundaria;
