--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,10 +68,10 @@ nav ul li a:hover {
     background-position: left;
     display: flex;
     align-items: flex-end;
-    justify-content: left;
+    justify-content: center;
   }
   .banner .inner-banner {
-    margin-left: 2rem;
+    margin-left: 1rem;
     /* background-color: $cor-terciaria;
     background: linear-gradient(rgba(190, 189, 189, 0.312),rgba(255, 255, 255, 0.400), rgba(255, 255, 255, 0.223), rgba(189, 12, 12, 0));
     border-top-left-radius: 20px;
@@ -91,7 +91,9 @@ nav ul li a:hover {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 70px;
+  margin-block: 30px;
+  width: 100%;
+  background-color: #f2f4f2;
 }
 #servicos h4 {
   font-size: 1.5rem;
@@ -344,6 +346,7 @@ nav ul li a:hover {
   align-items: center;
   justify-content: space-evenly;
   flex-direction: column;
+  background-color: #d7ded7;
 }
 #produtos h3 {
   margin-top: 80px;
@@ -453,4 +456,5 @@ footer {
   border-top: 2px solid #566134;
   margin-top: 1rem;
   padding: 1.2rem;
+  background-color: #f2f4f2;
 }/*# sourceMappingURL=styles.css.map */
