--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,6 +4,6 @@
 @import "./components/servicos";
 @import "./components/cupom";
 @import "./components/produtos";
-@import "./components/_footer.sass";
+@import "./components/footer";
 
 
