fix espaçamentos mobile

--- a/styles/components/_banner.scss
+++ b/styles/components/_banner.scss
@@ -40,7 +40,7 @@
     background: url(../../imagens/banner10.png) 100% no-repeat;
     min-height: 300px;
     background-size: cover;
-    background-position: left;
+    //background-position: left;
     
     display: flex;
     align-items:flex-end;
